<resources>
    <string name="app_name">IMS_mobile_client</string>
    <string name="sip_uri">(name@open-ims.test)</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_display_name">Display name</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_realm">Realm</string>
    <string name="prompt_pcscf">p-cscf host:port</string>
    <string name="display_name">Display name</string>
    <string name="prompt_sip_uri">SIP URI</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="title_login">login</string>
    <string name="title_calls">calls</string>
    <string name="title_conversations">conversations</string>
    <string name="title_repository">repository</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
